--- a/packages/index.html
+++ b/packages/index.html
@@ -1,2 +1,2 @@
 <!DOCTYPE html>
-<a href="repository.inb4after.zip">repository.inb4after.zip</a>
+<a href="repository.inb4after-1.1.zip">repository.inb4after-1.1.zip</a>
