--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div id="title">
         <hr>
         <h1 id="seren-repository-addon">Installing the Seren addon</h1>
-        <small>Current Repository Version: 1.0.0</small>
+        <small>Current Repository Version: 1.1</small>
     </div>
     <section>
 
@@ -90,11 +90,10 @@
             <li>Name it "inb4after Repository" without the quotes</li>
             <li>Head to " My Addons"</li>
             <li>Select install an addon from zipfile. </li>
-            <li>When it asks for the location, select "inb4after Repository", and install <code class="code-highlight">repository.inb4after.zip</code>.</li>
+            <li>When it asks for the location, select "inb4after Repository", and install <code class="code-highlight">repository.inb4after-1.1.zip</code>.</li>
             <li>Go back to My Addons and select "Install from repository"</li>
             <li>Select the "inb4after Repository" menu item</li>
             <li>Open "Video add-ons" and install Seren</li>
-            <li>(Optional) It's suggested to also install the context menu addon</li>
     </ul>
         <p></p>
 
